# StudyRecord

cmake/Step1/: CMakeLists.txt  tutorial.cxx
cmake/Step1-A_Basic_Starting_Point/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
cmake/Step2/: CMakeLists.txt
cmake/Step2-Adding_a_Library/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
cmake/Step2-Adding_a_Library/MathFunctions/: CMakeLists.txt
cmake/Step3/: CMakeLists.txt
cmake/Step3-Adding_Usage_Requirements_for_a_Library/: CMakeLists.txt
cmake/Step3-Adding_Usage_Requirements_for_a_Library/MathFunctions/: CMakeLists.txt
cmake/Step3/MathFunctions/: CMakeLists.txt
cmake/Step4/: CMakeLists.txt
cmake/Step4-Installing_and_Testing/: CMakeLists.txt
cmake/Step4-Installing_and_Testing/MathFunctions/: CMakeLists.txt
cmake/Step4/MathFunctions/: CMakeLists.txt
cmake/Step5/: CMakeLists.txt
cmake/Step5-Adding_System_Introspection/MathFunctions/: CMakeLists.txt  mysqrt.cxx
cmake/Step5/MathFunctions/: CMakeLists.txt  mysqrt.cxx
cmake/Step6-Adding_a_Custom_Command_and_Generated_File/MathFunctions/: CMakeLists.txt  mysqrt.cxx
cmake/Step7-Packing_an_installer/: CMakeLists.txt
cmake/Step8-Adding_Support_for_a_Testing_Dashboard/: CMakeLists.txt  CTestConfig.cmake
